--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>落枫时的第一个网页</title>
+    <title>落枫时的游戏库</title>
     <style>  
       body {
         margin: 0;
@@ -24,9 +24,9 @@
       padding: 15px;
       line-height: 1.7;
       ">
-      <p>我的第一个实操代码</p>
-        <p>也我的第一个网页</p>
-        <p>更是我的编程之路的开始</p>
+      <p>欢迎来到我的游戏库</p>
+        <p>此链接里游戏纯搬运</p>
+        <p>奴有冒犯，可删</p>
       </div>
       <div style="
       background-color: #f1f1f1;
@@ -35,7 +35,11 @@
       font-size:12xp;
       color:red;
       ">
-      <p>落枫时的伟大之路</p>
+      <div>
+<a href="https://game.qq.com/web201910/introduce.html">腾讯游戏</p>
+<a href="https://game.163.com/">网易游戏</p>
+<a href="https://bbs.mihoyo.com/">米游社</p>
+      </div>
       </div>
   </body>
 </html>
